<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:layout_marginStart="10dp"
                android:text="@string/override_network_type"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/override_network_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:layout_marginStart="10dp"
                android:text="@string/temporarily_not_metered"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/temporarily_not_metered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:layout_marginStart="10dp"
                android:text="@string/not_metered"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/not_metered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:layout_marginStart="10dp"
                android:text="@string/band_width_down"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/band_width_down"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:layout_marginStart="10dp"
                android:text="@string/band_width_up"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/band_width_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <TextView
            android:id="@+id/need_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/permission_message"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>